--- a/style/main.css
+++ b/style/main.css
@@ -86,3 +86,17 @@ header nav a:hover{
 .botao i{
     margin-right: 8px;
 }
+
+.container{
+    margin-left: 30px;
+}
+
+.documentario-principal .container{
+    width: 70%;
+}
+
+.box-filme{
+    height: 20%;
+    width: 20%;
+    display: block;
+}
